[gd_scene load_steps=8 format=3 uid="uid://cxvqhcha4xc7e"]

[ext_resource type="PackedScene" uid="uid://0hxsum08v4n7" path="res://level.tscn" id="1_jmp88"]
[ext_resource type="Script" path="res://main.gd" id="1_ml2pd"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_787v6"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_prc3l"]
sky_material = SubResource("ProceduralSkyMaterial_787v6")

[sub_resource type="Environment" id="Environment_njuh4"]
background_mode = 2
sky = SubResource("Sky_prc3l")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jl21u"]
bg_color = Color(0.380392, 0, 0.054902, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3mykc"]
bg_color = Color(0.709804, 0, 0.137255, 1)

[node name="Main" type="Node"]
script = ExtResource("1_ml2pd")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_njuh4")

[node name="Environment" parent="." instance=ExtResource("1_jmp88")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 338.0
offset_top = 195.0
offset_right = -338.0
offset_bottom = -195.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="BtnHost" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "HOST"

[node name="BtnJoin" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "JOIN"

[node name="AddressIP" type="LineEdit" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Address"
alignment = 1

[node name="HUD" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Point" type="Label" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "X"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer/HUD"]
custom_minimum_size = Vector2(30, 50)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 175.0
offset_top = -309.0
offset_right = -175.0
offset_bottom = -259.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_jl21u")
theme_override_styles/fill = SubResource("StyleBoxFlat_3mykc")
max_value = 3.0
value = 3.0
rounded = true
show_percentage = false

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/BtnHost" to="." method="_on_btn_host_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/BtnJoin" to="." method="_on_btn_join_pressed"]
[connection signal="spawned" from="MultiplayerSpawner" to="." method="_on_multiplayer_spawner_spawned"]
